# TDDTemplates

./: README.md
src/GoogleTestAndQtAndQsLog/lib/QsLog/: CMakeLists.txt
src/UnityTemplate/: CMakeLists.txt
src/UnityTemplate/src/: CMakeLists.txt  calc.c  calc.h  main.c
src/UnityTemplate/test/: CMakeLists.txt  main_test.c
